--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,20 +7,17 @@
     tools:context=".ProfileActivity"
     android:padding="16dp">
 
+    <!-- Bouton Retour -->
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
         android:text="Retour"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Titre -->
-
-    <!-- Image de profil -->
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
@@ -31,57 +28,87 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Image de profil -->
     <ImageView
         android:id="@+id/profileImageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/circular_shape"
+        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-
-    <!-- Nom complet -->
-    <TextView
-        android:id="@+id/nameTextView"
-        android:layout_width="0dp"
+    <!-- Bouton pour changer l'image -->
+    <Button
+        android:id="@+id/changePhotoButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nom"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:text="Changer la photo"
         app:layout_constraintTop_toBottomOf="@id/profileImageView"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Téléphone -->
+    <!-- Champs non modifiables -->
     <TextView
-        android:id="@+id/phoneTextView"
-        android:layout_width="0dp"
+        android:id="@+id/lastNameTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Téléphone"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginTop="16dp"
+        android:text="Nom"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/changePhotoButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Ville -->
     <TextView
-        android:id="@+id/cityTextView"
-        android:layout_width="0dp"
+        android:id="@+id/firstNameTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ville"
-        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center" />
+        android:layout_marginTop="8dp"
+        android:text="Prénom"
+        app:layout_constraintTop_toBottomOf="@id/lastNameTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/emailTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Email"
+        app:layout_constraintTop_toBottomOf="@id/firstNameTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- Champs modifiables -->
+    <EditText
+        android:id="@+id/phoneEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Téléphone"
+        app:layout_constraintTop_toBottomOf="@id/emailTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/cityEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="Ville"
+        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- Bouton Sauvegarder -->
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Sauvegarder"
+        app:layout_constraintTop_toBottomOf="@id/cityEditText"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
