--- a/app/src/main/res/layout/activity_add_trip.xml
+++ b/app/src/main/res/layout/activity_add_trip.xml
@@ -23,13 +23,10 @@
         <!-- Titre -->
         <TextView
             android:id="@+id/tvTitle"
+            style="@style/TitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Ajouter un trajet"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:text="Ajouter un trajet" />
 
         <!-- Spinner pour sélectionner le mode de transport -->
         <Spinner
