--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,22 +10,20 @@
     <!-- Titre -->
     <TextView
         android:id="@+id/tvTitle"
+        style="@style/TitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="Menu"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnProfile"
+        style="@style/ButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Profil"
         app:layout_constraintEnd_toEndOf="@+id/btnAddTrip"
         app:layout_constraintStart_toStartOf="@+id/btnAddTrip"
@@ -33,9 +31,9 @@
 
     <Button
         android:id="@+id/btnAddTrip"
+        style="@style/ButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Ajouter un trajet"
         app:layout_constraintEnd_toEndOf="@+id/btnMyTrips"
         app:layout_constraintStart_toStartOf="@+id/btnMyTrips"
@@ -43,9 +41,9 @@
 
     <Button
         android:id="@+id/btnMyTrips"
+        style="@style/ButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Mes trajets"
         app:layout_constraintEnd_toEndOf="@+id/btnSearchTrip"
         app:layout_constraintStart_toStartOf="@+id/btnSearchTrip"
@@ -53,9 +51,9 @@
 
     <Button
         android:id="@+id/btnSearchTrip"
+        style="@style/ButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Chercher un trajet"
         app:layout_constraintEnd_toEndOf="@+id/btnStatistics"
         app:layout_constraintStart_toStartOf="@+id/btnStatistics"
@@ -63,9 +61,9 @@
 
     <Button
         android:id="@+id/btnStatistics"
+        style="@style/ButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Statistiques"
         app:layout_constraintEnd_toEndOf="@+id/btnQuit"
         app:layout_constraintStart_toStartOf="@+id/btnQuit"
@@ -75,11 +73,10 @@
         android:id="@+id/btnQuit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Quitter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnStatistics" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
