--- a/app/src/main/res/layout/activity_search_travel.xml
+++ b/app/src/main/res/layout/activity_search_travel.xml
@@ -20,13 +20,10 @@
         <!-- Titre -->
         <TextView
             android:id="@+id/tvTitle"
+            style="@style/TitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Chercher un trajet"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:text="Chercher un trajet" />
 
         <!-- Sélecteur de date -->
         <DatePicker
