--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -22,29 +22,30 @@
     <!-- TextView pour afficher le nombre de trajets -->
     <TextView
         android:id="@+id/titleStatistics"
+        style="@style/TitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:padding="16dp"
         android:text="Statistiques"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- TextView pour afficher le total des montants encaissés -->
 
     <TextView
         android:id="@+id/tripsCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:padding="16dp"
         android:text="Nombre de trajets : 0"
         android:textSize="18sp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/titleStatistics"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.183"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/titleStatistics" />
 
-    <!-- TextView pour afficher le total des montants encaissés -->
     <TextView
         android:id="@+id/totalAmountTextView"
         android:layout_width="wrap_content"
