--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Définir un style de base pour les boutons -->
+    <!-- Style de base pour les boutons -->
     <style name="ButtonStyle">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -8,16 +8,8 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
     </style>
-    <!-- Définir un style de base pour les boutons -->
-    <style name="ButtonQuitStyle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">16sp</item>
-    </style>
 
-    <!-- Définir un style spécifique pour le titre -->
+    <!-- Style spécifique pour les titres -->
     <style name="TitleStyle">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
